--- a/components/Headers/Header/Header.module.css
+++ b/components/Headers/Header/Header.module.css
@@ -12,3 +12,17 @@
 	background-color: var(--white);
 	filter: drop-shadow(0 5px 7px rgba(0, 0, 0, 0.1));
 }
+
+@media (max-width: 1024px) {
+	.header {
+		width: calc(100% - 100px);
+		padding: 0 50px;
+	}
+}
+
+@media (max-width: 580px) {
+	.header {
+		width: calc(100% - 40px);
+		padding: 0 20px;
+	}
+}
