--- a/components/CatalogComponents/CatalogList/CatalogList.module.css
+++ b/components/CatalogComponents/CatalogList/CatalogList.module.css
@@ -1,9 +1,32 @@
 .catalogList {
+	position: relative;
+
 	display: grid;
 	align-items: center;
 
 	width: 100%;
-	margin: 50px 0;
+	margin: 30px 0 50px 0;
 	gap: 20px;
 	justify-items: center;
+}
+
+.productsFound {
+	margin-bottom: 10px;
+
+	color: var(--darkLight);
+
+	font-weight: 600;
+	justify-self: left;
+}
+
+@media (max-width: 580px) {
+	.catalogList {
+		width: calc(100% - 40px);
+		margin: 15px 0 30px 0;
+		padding: 0 20px;
+	}
+
+	.productsFound {
+		margin-bottom: 5px;
+	}
 }
