--- a/components/CatalogComponents/Sidebar/Sidebar.module.css
+++ b/components/CatalogComponents/Sidebar/Sidebar.module.css
@@ -1,6 +1,7 @@
 .sidebar {
-	position: sticky;
+	position: sticky !important;
 	z-index: 8;
+	top: 70px;
 
 	display: flex;
 	flex-direction: column;
@@ -66,9 +67,26 @@
 }
 
 .classTitle {
+	display: grid;
+	align-items: center;
+
 	color: var(--second);
 
 	font-weight: 600;
+	grid-template-columns: auto auto;
+}
+
+.arrow {
+	margin: 3px 0 0 10px;
+
+	transform-origin: 50% 50%;
+}
+
+.arrow > svg {
+	width: 7px;
+	fill: var(--second);
+
+	transition-duration: 500ms;
 }
 
 .categoryItem {
@@ -79,6 +97,12 @@
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 	color: var(--primary);
+}
+
+.classTitle:active > .arrow > svg {
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	fill: var(--primary);
 }
 
 .categoryItem:active,
@@ -95,6 +119,12 @@
 		color: var(--primary);
 	}
 
+	.classTitle:hover > .arrow > svg {
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		fill: var(--primary);
+	}
+
 	.categoryItem:hover,
 	.currentRouteItem:hover {
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -105,8 +135,6 @@
 
 @media (max-width: 580px) {
 	.sidebar {
-		position: relative;
-
 		width: calc(100% - 40px);
 		height: auto;
 		padding: 20px;
@@ -116,5 +144,15 @@
 		gap: 15px !important;
 
 		margin-top: 10px;
+	}
+
+	.arrow {
+		margin: 1px 0 0 7px;
+
+		transform-origin: 50% 50%;
+	}
+
+	.arrow > svg {
+		width: 5px;
 	}
 }
