--- a/components/CatalogComponents/Sidebar/Sidebar.module.css
+++ b/components/CatalogComponents/Sidebar/Sidebar.module.css
@@ -4,6 +4,7 @@
 	top: 70px;
 
 	display: flex;
+	overflow-y: auto;
 	flex-direction: column;
 
 	width: calc(100% - 40px);
@@ -12,7 +13,12 @@
 
 	background: var(--white);
 	filter: drop-shadow(5px 0 7px rgba(0, 0, 0, 0.1));
-	gap: 20px;
+	gap: 20px !important;
+}
+
+.sidebar::-webkit-scrollbar {
+	width: 3px;
+	height: 3px;
 }
 
 .sidebarDiv,
@@ -136,8 +142,10 @@
 @media (max-width: 580px) {
 	.sidebar {
 		width: calc(100% - 40px);
-		height: auto;
-		padding: 20px;
+	}
+
+	.sidebarDiv:last-child {
+		margin-bottom: 60px;
 	}
 
 	.categoryList {
