--- a/components/SearchComponents/Search/Search.module.css
+++ b/components/SearchComponents/Search/Search.module.css
@@ -33,13 +33,14 @@
 
 .dropdown {
 	position: absolute;
-	z-index: 1000;
+	z-index: 20;
 	top: 100%;
-	left: 0;
+	left: 50%;
+	transform: translateX(-50%);
 
 	display: grid;
 
-	width: 100%;
+	width: calc(100% - 20px);
 	padding: 10px;
 
 	border: 2px solid var(--second);
@@ -48,7 +49,7 @@
 	background: var(--white);
 	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 	grid-template-columns: 1fr;
-	gap: 5px;
+	gap: 10px;
 }
 
 .viewAll {
@@ -103,5 +104,11 @@
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 		filter: brightness(0.9);
+	}
+}
+
+@media (max-width: 580px) {
+	.dropdown {
+		width: max-content;
 	}
 }
