--- a/components/Buttons/Button/Button.module.css
+++ b/components/Buttons/Button/Button.module.css
@@ -3,8 +3,8 @@
 	align-items: center;
 
 	width: fit-content;
-	height: 43.2px;
-	padding: 0 20px;
+	height: fit-content;
+	padding: 10px 20px;
 
 	cursor: pointer;
 	transition-duration: 500ms;
@@ -71,6 +71,6 @@
 
 @media (max-width: 580px) {
 	.button {
-		padding: 0 10px;
+		padding: 5px 10px;
 	}
 }
