--- a/components/Common/Htag/Htag.module.css
+++ b/components/Common/Htag/Htag.module.css
@@ -31,7 +31,7 @@
 }
 
 .l {
-	font-size: 40px;
+	font-size: 32px;
 	font-weight: 400;
 	font-style: normal;
 }
@@ -62,7 +62,7 @@
 	}
 
 	.l {
-		font-size: 20px;
+		font-size: 26px;
 	}
 
 	.m {
@@ -80,15 +80,41 @@
 	}
 
 	.xxl {
-		font-size: 30px;
+		font-size: 40px;
 	}
 
 	.xl {
-		font-size: 24px;
+		font-size: 32px;
 	}
 
 	.l {
-		font-size: 18px;
+		font-size: 26px;
+	}
+
+	.m {
+		font-size: 20px;
+	}
+
+	.s {
+		font-size: 16px;
+	}
+}
+
+@media (max-width: 300px) {
+	.xxxl {
+		font-size: 40px;
+	}
+
+	.xxl {
+		font-size: 32px;
+	}
+
+	.xl {
+		font-size: 26px;
+	}
+
+	.l {
+		font-size: 20px;
 	}
 
 	.m {
@@ -96,6 +122,6 @@
 	}
 
 	.s {
-		font-size: 14px;
+		font-size: 12px;
 	}
 }
