update redesign && add popular products list

--- a/components/Common/Htag/Htag.module.css
+++ b/components/Common/Htag/Htag.module.css
@@ -8,44 +8,35 @@
 	margin: 0;
 
 	color: var(--dark);
+
+	font-weight: 400;
+	font-style: normal;
+	line-height: auto;
 }
 
 .xxxl {
 	font-size: 80px;
-	font-weight: 700;
-	font-style: normal;
-	line-height: normal;
 }
 
 .xxl {
-	font-size: 60px;
-	font-weight: 700;
-	font-style: normal;
-	line-height: normal;
+	font-size: 64px;
 }
 
 .xl {
-	font-size: 50px;
-	font-weight: 400;
-	font-style: normal;
+	font-size: 48px;
+	font-weight: 700;
 }
 
 .l {
-	font-size: 32px;
-	font-weight: 400;
-	font-style: normal;
+	font-size: 24px;
 }
 
 .m {
-	font-size: 24px;
-	font-weight: 400;
-	font-style: normal;
+	font-size: 20px;
 }
 
 .s {
-	font-size: 18px;
-	font-weight: 400;
-	font-style: normal;
+	font-size: 16px;
 }
 
 @media (max-width: 1024px) {
@@ -58,19 +49,19 @@
 	}
 
 	.xl {
-		font-size: 30px;
+		font-size: 36px;
 	}
 
 	.l {
-		font-size: 26px;
-	}
-
-	.m {
 		font-size: 22px;
 	}
 
+	.m {
+		font-size: 18px;
+	}
+
 	.s {
-		font-size: 16px;
+		font-size: 14px;
 	}
 }
 
@@ -88,15 +79,15 @@
 	}
 
 	.l {
-		font-size: 26px;
-	}
-
-	.m {
 		font-size: 20px;
 	}
 
-	.s {
+	.m {
 		font-size: 16px;
+	}
+
+	.s {
+		font-size: 12px;
 	}
 }
 
@@ -111,17 +102,18 @@
 
 	.xl {
 		font-size: 26px;
+		font-weight: 700;
 	}
 
 	.l {
-		font-size: 20px;
+		font-size: 18px;
 	}
 
 	.m {
-		font-size: 16px;
+		font-size: 14px;
 	}
 
 	.s {
-		font-size: 12px;
+		font-size: 10px;
 	}
 }
