--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@ body {
 	-ms-user-select: auto;
 	user-select: auto;
 
-	background: var(--white);
+	background: var(--lighter);
 
 	font-family: 'Roboto', sans-serif;
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
@@ -56,8 +56,10 @@ a {
 	--second: #3FAC3B;
 	--white: #FFF;
 	--dark: #1F1F1F;
-	--light: #DDD;
-	--darkLight: #A3A3A3;
+	--light: #E5E5E5;
+	--lighter: #F7F7F7;
+	--darkLight: #A6A6A6;
+	--heart: #FF4848;
 	--error: #FF1500;
 	--banana: #FFC803;
 	--font-family: 'Roboto', sans-serif;
