--- a/components/Common/Spinner/Spinner.module.css
+++ b/components/Common/Spinner/Spinner.module.css
@@ -4,7 +4,7 @@
 
 	animation: spin 1s linear infinite;
 
-	border: 5px solid var(--darkLight);
+	border: 5px solid var(--lighter);
 	border-top: 5px solid var(--second);
 	border-radius: 50%;
 }
@@ -12,4 +12,14 @@
 @keyframes spin {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
+}
+
+@media (max-width: 580px) {
+	.spinner {
+		width: 30px;
+		height: 30px;
+
+		border: 4px solid var(--lighter);
+		border-top: 4px solid var(--second);
+	}
 }
