--- a/components/ProductsComponents/ProductList/ProductList.module.css
+++ b/components/ProductsComponents/ProductList/ProductList.module.css
@@ -14,6 +14,14 @@
 	color: var(--primary);
 }
 
+.spinnerDiv {
+	display: grid;
+
+	width: 100%;
+	margin: 80px 0 120px 0;
+	justify-items: center;
+}
+
 @media (max-width: 1400px) {
 	.productList {
 		grid-template-columns: repeat(3, 1fr);
@@ -32,6 +40,10 @@
 		margin: 30px 60px 0 60px;
 
 		color: var(--primary);
+	}
+
+	.spinnerDiv {
+		margin: 60px 0 90px 0;
 	}
 }
 
@@ -60,5 +72,9 @@
 		margin: 20px 20px 0 20px;
 
 		color: var(--primary);
+	}
+
+	.spinnerDiv {
+		margin: 40px 0 60px 0;
 	}
 }
