--- a/components/Buttons/Button/Button.module.css
+++ b/components/Buttons/Button/Button.module.css
@@ -2,33 +2,28 @@
 	display: grid;
 	align-items: center;
 
-	width: fit-content;
-	height: fit-content;
-	padding: 10px 20px;
+	width: 100%;
+	height: 100%;
 
 	cursor: pointer;
 	transition-duration: 500ms;
 
-	border: 2px solid var(--second);
-	border-radius: 10px;
-	background: var(--white);
+	border: none;
+
+	border-radius: 5px;
+	background: var(--second);
 	justify-items: center;
 }
 
 .button:active {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	color: var(--white);
-
-	background: var(--second);
+	filter: brightness(0.9);
 }
 
 .text {
-	transition-duration: 500ms;
+	color: var(--white);
 
-	color: var(--second) !important;
-
-	font-weight: 600 !important;
+	font-weight: 600;
 }
 
 .button:active > .text {
@@ -56,16 +51,7 @@
 @media (min-width: 1024px) {
 	.button:hover {
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		color: var(--white);
-
-		background: var(--second);
-	}
-
-	.button:hover > .text {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		color: var(--white) !important;
+		filter: brightness(0.9);
 	}
 }
 
