--- a/components/CatalogComponents/FiltersBar/FiltersBar.module.css
+++ b/components/CatalogComponents/FiltersBar/FiltersBar.module.css
@@ -1,141 +1,40 @@
 .filtersBar {
-	position: sticky !important;
-	z-index: 7;
-	top: 110px;
-
 	display: grid;
 	align-items: center;
 
-	width: calc(100% - 70px);
+	width: calc(100% - 40px);
 	height: fit-content;
-	padding: 20px 0 20px 70px;
+	padding: 15px 20px;
 
-	white-space: nowrap;
-
+	border-radius: 15px;
 	background: var(--white);
-	filter: drop-shadow(5px 0 7px rgba(0, 0, 0, 0.1));
-	grid-template-columns: auto auto 1fr;
 	gap: 20px;
+	grid-template-columns: auto auto auto 1fr;
 }
 
-.dropdown {
-	position: relative;
+.commonFiltersBar {
+	grid-template-columns: auto auto 1fr;
 }
 
-.sortTitle {
-	display: grid;
-	align-items: center;
-
-	cursor: pointer;
+.filterText {
 	user-select: none;
+
+	color: var(--darkLight);
+}
+
+.filterText > span {
+	cursor: pointer;
 	transition-duration: 500ms;
 
 	color: var(--second);
 
 	font-weight: 500;
-	grid-template-columns: auto 1fr;
-	gap: 7px;
 }
 
-.sortTitle:active {
+.filterText > span:active {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 	color: var(--primary);
-}
-
-.sortTitle > div > svg {
-	width: 15px;
-	fill: var(--second);
-
-	transition-duration: 500ms;
-	transform-origin: center;
-}
-
-.sortTitle:active > div > svg {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	fill: var(--primary);
-}
-
-.dropdownContent {
-	position: absolute;
-	z-index: 10;
-	top: 100%;
-	left: 0;
-
-	display: grid;
-
-	width: max-content;
-	padding: 10px 15px;
-
-	border-radius: 10px;
-	background-color: white;
-	filter: drop-shadow(5px 0 7px rgba(0, 0, 0, 0.1));
-	gap: 10px;
-}
-
-.dropdownContent > h1 {
-	cursor: pointer;
-	user-select: none;
-	transition-duration: 500ms;
-
-	color: var(--darkLight);
-
-	font-weight: 500;
-}
-
-.dropdownContent > h1:active {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	filter: brightness(0.9);
-}
-
-.checkboxLabel {
-	display: grid;
-
-	width: fit-content;
-	grid-template-columns: auto 1fr;
-}
-
-.checkboxLabel input {
-	position: relative;
-
-	width: 16px;
-	height: 16px;
-	margin-right: 7px;
-
-	cursor: pointer;
-	transition: background-color 0.3s ease, border-color 0.3s ease;
-
-	border: 2px solid var(--second);
-	border-radius: 5px;
-	outline: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-}
-
-.checkboxLabel input:checked::before {
-	position: absolute;
-	top: -1px;
-	left: 5px;
-
-	width: 3px;
-	height: 10px;
-
-	content: '';
-	transform: rotate(45deg);
-
-	border: solid var(--white);
-	border-width: 0 2px 2px 0;
-}
-
-.checkboxLabel input:checked {
-	background-color: var(--second);
-}
-
-.checkboxLabel input:active {
-	border-color: var(--primary);
 }
 
 .filtersName {
@@ -145,14 +44,12 @@
 	transition-duration: 500ms;
 
 	color: var(--second);
-	border: 2px solid var(--primary);
 	border: 2px solid var(--second);
-	border-radius: 10px;
+	border-radius: 5px;
 	outline: none;
 	background: var(--white);
 
-	font-size: 14px;
-	font-weight: 600;
+	font-size: 16px;
 }
 
 .filtersName::placeholder {
@@ -166,77 +63,165 @@
 	border-color: var(--primary);
 }
 
+.dropdownContainer {
+	position: relative;
+
+	display: grid;
+
+	width: fit-content;
+}
+
+.dropdown {
+	position: absolute;
+	z-index: 10;
+	top: calc(100% + 10px);
+	left: 50%;
+
+	display: grid;
+
+	width: 100%;
+	height: fit-content;
+	padding: 10px;
+
+	transform: translateX(-50%);
+
+	border-radius: 5px;
+	background: var(--white);
+	box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+	gap: 10px;
+}
+
+.dropdownItem {
+	cursor: pointer;
+	transition-duration: 500ms;
+
+	color: var(--darkLight);
+
+	font-weight: 500;
+}
+
+.dropdownItem:active {
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	color: var(--second);
+}
+
+.checkboxLabel {
+	display: grid;
+	align-items: center;
+
+	width: fit-content;
+	grid-template-columns: auto 1fr;
+}
+
+.checkboxLabel input {
+	position: relative;
+
+	width: 15px;
+	height: 15px;
+	margin-right: 5px;
+
+	cursor: pointer;
+	transition-duration: 500ms;
+
+	border: 2px solid var(--second);
+	border-radius: 5px;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+
+.checkboxLabel input:checked {
+	background-color: var(--second);
+}
+
+.checkboxLabel input:active {
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	border-color: var(--primary);
+}
+
+.checkboxLabel > h1 {
+	cursor: pointer;
+}
+
+.displayDiv {
+	display: grid;
+	align-items: center;
+
+	width: 100%;
+	justify-items: right;
+	gap: 20px;
+	grid-template-columns: 1fr auto auto;
+}
+
+.displayIcon {
+	width: 20px;
+	fill: var(--second);
+
+	cursor: pointer;
+	transition-duration: 500ms;
+
+	opacity: 0.5;
+}
+
+.displayIcon:active {
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	opacity: 1;
+}
+
+.activeIcon {
+	opacity: 1;
+}
+
 @media (min-width: 1024px) {
-	.sortTitle:hover {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		color: var(--primary);
-	}
-
-	.sortTitle:hover > div > svg {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		fill: var(--primary);
-	}
-
-	.dropdownContent > h1:hover {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		filter: brightness(0.9);
-	}
-
-	.checkboxLabel input:hover {
-		border-color: var(--primary);
-	}
-
 	.filtersName:hover {
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 		border-color: var(--primary);
 	}
+
+	.filterText > span:hover {
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		color: var(--primary);
+	}
+
+	.dropdownItem:hover {
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		color: var(--second);
+	}
+
+	.checkboxLabel input:hover {
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		border-color: var(--primary);
+	}
+
+	.displayIcon:hover {
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		opacity: 1;
+	}
 }
 
 @media (max-width: 1024px) {
-	.filtersBar {
-		width: calc(100% - 50px);
-		padding-left: 50px;
-		grid-template-columns: auto 1fr;
-		gap: 10px 20px;
-	}
-
-	.sortTitle > div > svg {
-		width: 12px;
-	}
-
 	.filtersName {
-		width: 80%;
+		font-size: 14px;
 	}
 }
 
 @media (max-width: 580px) {
-	.filtersBar {
-		top: 170px;
-
-		width: calc(100% - 20px);
-		padding-left: 20px;
-		gap: 15px;
-	}
-
-	.sortTitle {
-		gap: 5px;
-	}
-
-	.sortTitle > div > svg {
-		width: 10px;
-	}
-
-	.checkboxLabel input {
-		margin-right: 5px;
+	.filtersName {
+		font-size: 12px;
 	}
 }
 
-@media (max-width: 400px) {
-	.filtersBar {
-		grid-template-columns: auto;
+@media (max-width: 300px) {
+	.filtersName {
+		font-size: 10px;
 	}
 }
