--- a/components/CatalogComponents/Sidebar/Sidebar.module.css
+++ b/components/CatalogComponents/Sidebar/Sidebar.module.css
@@ -1,166 +1,72 @@
 .sidebar {
-	position: sticky !important;
-	z-index: 8;
-	top: 110px;
-
-	display: flex;
-	overflow-y: auto;
-	flex-direction: column;
+	display: grid;
 
 	width: calc(100% - 40px);
-	height: calc(100vh - 110px);
+	height: auto;
 	padding: 20px;
 
+	border-radius: 15px;
 	background: var(--white);
-	filter: drop-shadow(5px 0 7px rgba(0, 0, 0, 0.1));
-	gap: 20px !important;
+	gap: 15px;
+	grid-template-rows: auto auto auto 1fr;
 }
 
-.sidebar::-webkit-scrollbar {
-	width: 3px;
-	height: 3px;
-}
-
-.sidebarDiv,
-.categoryList {
+.sidebarDiv {
 	display: grid;
-	gap: 10px !important;
-
-	height: auto;
-}
-
-.categoryList {
-	padding-left: 10px;
-}
-
-.sidebarHeader {
-	display: grid;
-	align-items: center;
-
-	width: 100%;
-	padding-bottom: 20px;
-
-	border-bottom: 1px solid var(--darkLight);
-	grid-template-columns: 1fr auto;
-}
-
-.hiddenSidebarHeader {
-	padding-bottom: 0;
-
-	border: none;
-}
-
-.currentRoute {
-	user-select: none;
-
-	color: var(--darkLight);
-
-	font-weight: 600;
-}
-
-.currentRouteItem {
-	cursor: pointer;
-	transition-duration: 500ms;
+	gap: 10px;
+	grid-template-rows: auto 1fr;
 }
 
 .classTitle,
-.categoryItem {
-	height: fit-content;
-
+.categoryTitle {
 	cursor: pointer;
 	user-select: none;
 	transition-duration: 500ms;
 }
 
 .classTitle {
-	display: grid;
-	align-items: center;
+	height: fit-content;
 
 	color: var(--second);
 
-	font-weight: 600;
-	grid-template-columns: auto auto;
-}
-
-.arrow {
-	margin: 3px 0 0 10px;
-
-	transform-origin: 50% 50%;
-}
-
-.arrow > svg {
-	width: 7px;
-	fill: var(--second);
-
-	transition-duration: 500ms;
-}
-
-.categoryItem {
-	color: var(--darkLight);
+	font-weight: 500;
 }
 
 .classTitle:active {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-	color: var(--primary);
+	color: var(--primary) !important;
 }
 
-.classTitle:active > .arrow > svg {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.categoriesDiv {
+	display: grid;
 
-	fill: var(--primary);
+	height: fit-content;
+	margin-top: 5px;
+	padding-left: 10px;
+	gap: 10px;
 }
 
-.categoryItem:active,
-.currentRouteItem:active {
+.categoryTitle {
+	color: var(--darkLight);
+}
+
+.categoryTitle:active {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-	filter: brightness(0.9);
+	color: var(--second);
 }
 
 @media (min-width: 1024px) {
 	.classTitle:hover {
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		color: var(--primary);
+		color: var(--primary) !important;
 	}
 
-	.classTitle:hover > .arrow > svg {
+	.categoryTitle:hover {
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		fill: var(--primary);
-	}
-
-	.categoryItem:hover,
-	.currentRouteItem:hover {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		filter: brightness(0.9);
-	}
-}
-
-@media (max-width: 580px) {
-	.sidebar {
-		width: calc(100% - 40px);
-	}
-
-	.sidebarDiv:last-child {
-		margin-bottom: 60px;
-	}
-
-	.categoryList {
-		gap: 15px !important;
-
-		margin-top: 10px;
-	}
-
-	.arrow {
-		margin: 1px 0 0 7px;
-
-		transform-origin: 50% 50%;
-	}
-
-	.arrow > svg {
-		width: 5px;
+		color: var(--second);
 	}
 }
