--- a/components/ProductsComponents/ProductItem/ProductItem.module.css
+++ b/components/ProductsComponents/ProductItem/ProductItem.module.css
@@ -12,6 +12,13 @@
 	grid-template-rows: auto 1fr;
 }
 
+.displayLines {
+	grid-template-columns: 1fr auto auto;
+	grid-template-rows: auto;
+
+	align-items: center;
+}
+
 .productPhoto {
 	display: grid;
 	overflow: hidden;
