--- a/page_components/MainPage/MainPage.module.css
+++ b/page_components/MainPage/MainPage.module.css
@@ -6,3 +6,27 @@
 	justify-items: left;
 	grid-template-rows: auto auto 1fr;
 }
+
+.productTitle {
+	margin: 40px 80px 0 80px !important;
+
+	color: var(--primary);
+}
+
+@media (max-width: 1024px) {
+	.productTitle {
+		margin: 30px 60px 0 60px !important;
+	}
+}
+
+@media (max-width: 800px) {
+	.productTitle {
+		margin: 20px 40px 0 40px !important;
+	}
+}
+
+@media (max-width: 580px) {
+	.productTitle {
+		margin: 20px 20px 0 20px !important;
+	}
+}
