--- a/components/ProfileComponents/ManagerBlock/ManagerBlock.module.css
+++ b/components/ProfileComponents/ManagerBlock/ManagerBlock.module.css
@@ -16,7 +16,7 @@
 
 .loadDiv {
 	display: grid;
-	grid-template-columns: auto 1fr;
+	grid-template-columns: auto auto 1fr;
 	gap: 10px;
 
 	align-items: center;
