--- a/page_components/ProfilePage/ProfilePage.module.css
+++ b/page_components/ProfilePage/ProfilePage.module.css
@@ -11,7 +11,7 @@
 	display: grid;
 	align-items: top;
 
-	height: calc(100vh - 295.6px);
+	height: fit-content;
 	margin-top: 110px;
 	padding-top: 40px;
 	grid-template-columns: auto auto;
